Skip to content

Mono AAC with channel pairing is broken with AAC

This file decodes fine with --codec avcodec but not with --codec faad which is the default decoder used.

http://streams.videolan.org/misc/test-files-ccc/lagrange_breaks_libav_and_faad2.mka

There seems to be gaps in the output stream.

There's a log of Unexpected channel configuration change at the beginning of the stream. It doesn't detect the second channel as a copy of the first one and returns an error "21".

On top of that, faad doesn't decode the first 3 packets, losing audio data/sync at the beginning.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information