codec: faad: set default rate to source's (fix #14213)

output pts/length is computed from input block pts.
If sample rate is wrong, all timings are borked.
Try to use the declared sample rate if possible.

If source has wrong sample rate